# rust-zero2prod

./: .gitignore  Cargo.toml  Dockerfile  README.md
.html/: readme.html
migrations/: 20240916153106_create_subscriptions_table.sql
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
